--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,61 +2,13 @@
 
   <h1>Account Home</h1>
   <hr/>
-  <p>Clinics on your account:  <%= link_to "Add Clinic", new_clinic_path, class:'btn btn-info btn-sm' %></p>
-  <div class="container">
-    <table class="table table-striped table-hover">
-      <thead class="table-dark">
-        <tr class="text-start">
-          <th class="col-4" scope="col">Name</th>
-          <th class="col-4" scope="col">Address</th>
-          <th class="col-2" scope="col">Account</th>
-          <th class="col-2" scope="col">Show</th>
-        </tr>
-      </thead>
-      <tbody class="table-group-divider">
-        <% @clinics.each do |clinic| %>
-          <% if clinic.account == current_account %>
+  
+  <%= render "clinics" %>
 
-            <tr class="text-start">
-              <th scope="row"><%= clinic.name %></th>
-              <td>To Be Added</td>
-              <td class="text-center"><%= clinic.account_id %></td>
-              <td class="text-center"><%= link_to "Show this Clinic", clinic, class:'rounded-pill btn btn-secondary btn-sm' %></td>
-            </tr>
-                    
-          <% end %>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
   <br>
-  <p>Doctors on your account:  <%= link_to "Add Doctor", new_doctor_path, class:'btn btn-info btn-sm' %></p>
-  <div class="container text-start">
-    <table class="table table-striped table-hover">
-      <thead class="table-dark">
-        <tr>
-          <th class="col-4" scope="col">Name</th>
-          <th class="col-4" scope="col">Field</th>
-          <th class="col-2" scope="col">Account</th>
-          <th class="col-2" scope="col">Show</th>
-        </tr>
-      </thead>
-      <tbody class="table-group-divider">
-        <% @doctors.each do |doctor| %>
-          <% if doctor.account == current_account %>
 
-            <tr>
-              <th scope="row"><%= doctor.name %></th>
-              <td><%= doctor.field %></td>
-              <td class="text-center"><%= doctor.account_id %></td>
-              <td class="text-center"><%= link_to "Show this Doctor", doctor, class:'rounded-pill btn btn-secondary btn-sm' %></td>
-            </tr>
-                    
-          <% end %>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
+  <%= render "doctors" %>
+
 <% else %>
 
   <h3 class='text-center'>Please sign in to continue or sign up to get started!</h3>
