added patients model/controller/views and updated home index to include patients

--- a/app/views/home/_doctors.html.erb
+++ b/app/views/home/_doctors.html.erb
@@ -1,5 +1,5 @@
 <p>Doctors on your account:  <%= link_to "Add Doctor", new_doctor_path, class:'btn btn-info btn-sm' %></p>
-<div class="container text-start">
+<div class="container">
   <table class="table table-striped table-hover">
     <thead class="table-dark">
       <tr>
