--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,9 +5,15 @@
   
   <%= render "clinics" %>
 
-  <br>
+  <br/>
 
   <%= render "doctors" %>
+
+  <br/>
+
+  <%= render "patients" %>
+
+  <br/>
 
 <% else %>
 
