--- a/app/views/home/_nav.html.erb
+++ b/app/views/home/_nav.html.erb
@@ -16,6 +16,10 @@
         </li>
 
         <li class="nav-item me-2">
+          <%= link_to 'Calendar', home_calendar_path, class:'nav-link btn btn-primary p-1 link-light' %>
+        </li>
+
+        <li class="nav-item me-2">
           <%= link_to 'Clinics', clinics_path, class:'nav-link btn btn-primary p-1 link-light' %>
         </li>
 
