--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require_self
  */
 
+
 .container {
   border-radius: 15px;
 }
@@ -46,5 +47,9 @@
   vertical-align: top;
   padding: 2px;
   border: 2px solid black;
+}
+
+#calendar-week {
+  text-decoration: none;
 }
 
