--- a/app/views/home/_nav.html.erb
+++ b/app/views/home/_nav.html.erb
@@ -16,7 +16,7 @@
         </li>
 
         <li class="nav-item me-2">
-          <%= link_to 'Calendar', home_calendar_path, class:'nav-link btn btn-primary p-1 link-light' %>
+          <%= link_to 'Calendar', calendars_path, class:'nav-link btn btn-primary p-1 link-light' %>
         </li>
 
         <li class="nav-item me-2">
