--- a/app/views/home/_patients.html.erb
+++ b/app/views/home/_patients.html.erb
@@ -10,17 +10,15 @@
       </tr>
     </thead>
     <tbody class="table-group-divider">
-      <% @patients.each do |patient| %>
-        <% if patient.account == current_account %>
+      <% current_account.patients.limit(3).each do |patient| %>
 
-          <tr>
-            <td scope="row"><%= patient.name %></td>
-            <td><%= patient.address %></td>
-            <td class="text-center"><%= patient.account_id %></td>
-            <td class="text-center"><%= link_to "Show this Patient", patient, class:'rounded-pill btn btn-secondary btn-sm' %></td>
-          </tr>
+        <tr>
+          <td scope="row"><%= patient.name %></td>
+          <td><%= patient.address %></td>
+          <td class="text-center"><%= patient.account_id %></td>
+          <td class="text-center"><%= link_to "Show this Patient", patient, class:'rounded-pill btn btn-secondary btn-sm' %></td>
+        </tr>
                   
-        <% end %>
       <% end %>
     </tbody>
   </table>
