add See All X to home partials, list of patient appointments on patient show/index

--- a/app/views/home/_patients.html.erb
+++ b/app/views/home/_patients.html.erb
@@ -20,6 +20,9 @@
         </tr>
                   
       <% end %>
+      <tr>
+        <td class="text-center p-0" colspan="4"><%= link_to "See all Patients", patients_path, class:'btn btn-secondary form-control'  %></td>
+      </tr>
     </tbody>
   </table>
 </div>
