--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,19 @@
 <% if account_signed_in? %>
 
-  <h1>Account Home</h1>
+  <h1>Account Overview</h1>
   <hr/>
   
   <%= render "clinics" %>
-
   <br/>
+  <hr/>
 
   <%= render "doctors" %>
-
   <br/>
+  <hr/>
 
   <%= render "patients" %>
-
   <br/>
+  <hr/>
 
 <% else %>
 
