--- a/app/views/home/_nav.html.erb
+++ b/app/views/home/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark p-1">
   <div class="container-fluid">
     <%= link_to "Med Test", root_path, class:'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,33 +12,37 @@
         <% if account_signed_in? %>
 
         <li class="nav-item me-2">
-          <%= link_to 'Account Overview', root_path, class:'nav-link btn btn-primary p-1 link-light' %>
+          <%= link_to 'Account Overview', root_path, class:'btn btn-primary p-1' %>
         </li>
 
         <li class="nav-item me-2">
-          <%= link_to 'Calendar', calendars_path, class:'nav-link btn btn-primary p-1 link-light' %>
+          <%= link_to 'Calendar', calendars_path, class:'btn btn-primary p-1' %>
         </li>
 
         <li class="nav-item me-2">
-          <%= link_to 'Clinics', clinics_path, class:'nav-link btn btn-primary p-1 link-light' %>
+          <%= link_to 'Clinics', clinics_path, class:'btn btn-secondary p-1' %>
         </li>
 
         <li class="nav-item me-2">
-          <%= link_to 'Doctors', doctors_path, class:'nav-link btn btn-primary p-1 link-light' %>
+          <%= link_to 'Doctors', doctors_path, class:'btn btn-secondary p-1' %>
         </li>
 
         <li class="nav-item me-2">
-          <%= button_to 'Sign Out', destroy_account_session_path, method: :delete, class:'nav-link btn btn-primary p-1 link-light'%>
+          <%= link_to 'Patients', patients_path, class:'btn btn-secondary p-1' %>
+        </li>
+
+        <li class="nav-item me-2">
+          <%= button_to 'Sign Out', destroy_account_session_path, method: :delete, class:'btn btn-secondary p-1'%>
         </li>
 
         <% else %>
 
         <li class="nav-item me-2">
-          <%= link_to 'Sign In', new_account_session_path, class:'nav-link btn btn-primary p-1 link-light' %>
+          <%= link_to 'Sign In', new_account_session_path, class:'btn btn-primary p-1' %>
         </li>
 
         <li class="nav-item me-2">
-          <%= link_to 'Sign Up', new_account_registration_path, class:'nav-link btn btn-primary p-1 link-light' %>
+          <%= link_to 'Sign Up', new_account_registration_path, class:'btn btn-primary p-1' %>
         </li>
 
         <% end %>
