create migration to add address column to clinics table, updated controller to permit address and updated forms

--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -9,4 +9,4 @@
   <% end %>
 </div>
 
-<%= link_to "New appointment", new_appointment_path %>
+<%= link_to "New appointment", new_appointment_path, class:'btn btn-primary btn-sm' %>
