--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -4,7 +4,7 @@
       <thead>
         <tr>
           <p class="fs-3"><%= @month %> <%= @d.year %></p>
-          <p class="text-end m-0"><%= link_to "Appointments", appointments_path, class:'btn btn-secondary btn-sm' %></p>
+          <p class="text-end m-0"><%= link_to "Appointments", appointments_path, class:'btn btn-info btn-sm' %></p>
         </tr>
         <tr>
           <th scope="col" width="100px">Sunday</th>
