--- a/app/views/clinics/_clinic.html.erb
+++ b/app/views/clinics/_clinic.html.erb
@@ -1,8 +1,8 @@
 <div id="<%= dom_id clinic %>">
 
   <p>
-    <strong>Account:</strong>
-    <%= clinic.account_id %>
+    <strong>Address:</strong>
+    <%= clinic.address %>
   </p>
 
 </div>
