--- a/app/views/clinics/_form.html.erb
+++ b/app/views/clinics/_form.html.erb
@@ -17,8 +17,13 @@
   </div>
 
   <div>
-    <%= form.label :account_id, style: "display: block" %>
-    <%= form.number_field :account_id, value: current_account.id %>
+    <%= form.label :address, style: "display: block" %>
+    <%= form.text_field :address %>
+  </div>
+
+  <div>
+    <% form.label :account_id, style: "display: block" %>
+    <%= form.hidden_field :account_id, value: current_account.id %>
   </div>
 
   <div>
