--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div>
-    <%= form.label :account_id, style: "display: block" %>
-    <%= form.text_field :account_id %>
+    <% form.label :account_id, style: "display: block" %>
+    <%= form.hidden_field :account_id %>
   </div>
 
   <div>
