--- a/app/views/clinics/show.html.erb
+++ b/app/views/clinics/show.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" id="show">
   <div class="card-header text-center fs-5"><%= @clinic.name %></div>
   <div class="card-body">
     <p class="card-text"><%= render @clinic %></p>
