--- a/app/views/clinics/index.html.erb
+++ b/app/views/clinics/index.html.erb
@@ -4,11 +4,11 @@
 <hr/>
 
 <div id="clinics" class="container">
-  <div class="row row-cols-12 text-center">
+  <div class="row row-cols-3 text-center">
     <% current_account.clinics.each do |clinic| %>
       
       <div class="col">
-        <div class="card">
+        <div class="card p-1 m-1" id="clinic">
           <div class="card-body">
             <h5 class="card-title"><%= clinic.name %></h5>
               <p class="card-text"><%= render clinic %></p>
