--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,16 +1,16 @@
-<div class="card">
-  <div class="card-header text-center fs-5"><%= @doctor.name %></div>
+<div class="card" id="show">
+  <div class="card-header text-center fs-5">Dr. <%= @doctor.name %></div>
   <div class="card-body">
     <p class="card-text"><%= render @doctor %></p>
     <div class="text-end">
-      <%= link_to "Edit this doctor", edit_doctor_path(@doctor), class:'text-end btn btn-info btn-sm' %>
-      <%= link_to 'Back to doctors', doctors_path, class:'btn btn-info btn-sm' %>
+      <%= link_to "Edit this Doctor", edit_doctor_path(@doctor), class:'text-end btn btn-primary btn-sm' %>
+      <%= link_to 'Back to Doctors', doctors_path, class:'btn btn-primary btn-sm' %>
     </div>
   </div>
 </div>
 
 <div class="text-end mt-4">
-  <%= link_to "Delete doctor", @doctor, class:'btn btn-danger btn-sm', data: {
+  <%= link_to "Delete Doctor", @doctor, class:'btn btn-danger btn-sm', data: {
             turbo_method: :delete,
             turbo_confirm: "Are you sure you want to delete Dr. #{@doctor.name}'s Record?"
         } %>
