--- a/app/views/home/_patients.html.erb
+++ b/app/views/home/_patients.html.erb
@@ -3,7 +3,7 @@
   <table class="table table-striped table-hover">
     <thead class="table-dark">
       <tr>
-        <th class="col-4" scope="col">Name</th>
+        <th class="col-4" scope="col">Patient Name</th>
         <th class="col-6" scope="col">Address</th>
         <th class="col-2" scope="col">Show</th>
       </tr>
@@ -23,7 +23,7 @@
           <tr>
             <td scope="row"><%= patient.name %></td>
             <td><%= patient.address %></td>
-            <td class="text-center"><%= link_to "Show this Patient", patient, class:'rounded-pill btn btn-secondary btn-sm' %></td>
+            <td class="text-center"><%= link_to "Show this Patient", patient, class:'rounded-pill btn btn-secondary btn-sm border border-dark' %></td>
           </tr>
                     
         <% end %>
