--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -4,13 +4,36 @@
 
 <hr/>
 
-<div id="patients">
-  <% current_account.patients.each do |patient| %>
-    <%= render patient %>
-    <p>
-      <%= link_to "Show this patient", patient %>
-    </p>
-  <% end %>
-</div>
+<table class="table table-hover table-striped">
+    <thead class="table-dark">
+      <tr>
+        <th class="col-4" scope="col">Name</th>
+        <th class="col-6" scope="col">Address</th>
+        <th class="col-2" scope="col">Show</th>
+      </tr>
+    </thead>
+    <tbody class="table-group-divider">
+
+      <% if current_account.patients.empty? %>
+
+        <tr>
+          <td colspan="4" class="text-center">Added Patients will appear here</td>
+        </tr>
+
+      <% else %>
+
+        <% current_account.patients.order(:name).each do |patient| %>
+
+          <tr>
+            <td scope="row"><%= patient.name %></td>
+            <td><%= patient.address %></td>
+            <td class="text-center"><%= link_to "Patient Details", patient, class:'btn btn-primary btn-sm' %></td>
+          </tr>
+                    
+        <% end %>
+
+      <% end %>
+    </tbody>
+  </table>
 
 
