setup table for appointments index view

--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -3,7 +3,7 @@
     <table class="table">
       <thead>
         <tr>
-          <p class="fs-3"><%= @month %> <%= @d.year %></p>
+          <p class="fs-3"><strong><%= @month %> <%= @d.year %></strong></p>
           <p class="text-end m-0"><%= link_to "Appointments", appointments_path, class:'btn btn-info btn-sm' %></p>
         </tr>
         <tr>
