--- a/app/views/clinics/index.html.erb
+++ b/app/views/clinics/index.html.erb
@@ -1,5 +1,6 @@
-<h1>Clinics</h1>
-
+<div class="text-center">
+  <h1>Clinics</h1>
+</div>
 <%= link_to "New Clinic", new_clinic_path, class:'btn btn-primary btn-sm' %>
 <hr/>
 
