--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,5 +1,6 @@
-<h1>Doctors</h1>
-
+<div class="text-center">
+  <h1>Doctors</h1>
+</div>
 <%= link_to "New Doctor", new_doctor_path, class:'btn btn-primary btn-sm' %>
 
 <hr/>
