--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 
 <% if account_signed_in? %>
 
-  <h1>Account Overview</h1>
+  <h1 class="text-center" >Account Overview</h1>
   <hr/>
 
   <h6>Summary:</h6>
