--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,5 +1,6 @@
-<h1>Patients</h1>
-
+<div class="text-center">
+  <h1>Patients</h1>
+</div>
 <%= link_to "New Patient", new_patient_path, class:'btn btn-primary btn-sm' %>
 
 <hr/>
