--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,12 +1,38 @@
-<h1>Appointments</h1>
-
-<div id="appointments">
-  <% current_account.appointments.order(:date, :time).each do |appointment| %>
-    <%= render appointment %>
-    <p>
-      <%= link_to "Show this appointment", appointment %>
-    </p>
-  <% end %>
+<div class="text-center">
+  <h1>Appointments</h1>
 </div>
-
 <%= link_to "New appointment", new_appointment_path, class:'btn btn-primary btn-sm' %>
+
+<hr/>
+
+<table class="table table-striped" style="table-layout: fixed ; width: 100%;">
+  <thead>
+    <tr>
+      <th scope="col">Date</th>
+      <th scope="col">Time</th>
+      <th scope="col">Patient</th>
+      <th scope="col">Doctor</th>
+      <th scope="col">Clinic</th>
+
+
+    </tr>
+  </thead>
+  <tbody class="table-group-divider"> 
+    <% for appointment in @appointments.order(:date, :time) do %>
+      <tr>
+        <td>
+          <%= link_to appointment_path(appointment) do %>
+            <%= appointment.date.strftime('%B %-d, %Y') %>
+          <% end %>
+        </td>
+        <td><%= appointment.time.strftime('%-I:%M%P') %></td>
+        <td><%= appointment.patient.name %></td>
+        <td><%= appointment.doctor.name %></td>
+        <td><%= appointment.clinic.name %></td>
+      </tr>
+    <% end %>
+      
+  </tbody>
+</table>
+
+
