--- a/app/views/clinics/edit.html.erb
+++ b/app/views/clinics/edit.html.erb
@@ -4,7 +4,7 @@
 
 <br>
 
-<div>
-  <%= link_to "Show this clinic", @clinic %> |
-  <%= link_to "Back to clinics", clinics_path %>
+<div class='text-end'>
+  <%= link_to "Show this clinic", @clinic, class:'btn btn-primary btn-sm' %> 
+  <%= link_to "Back to clinics", clinics_path, class:'btn btn-primary btn-sm' %>
 </div>
