--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing patient</h1>
+<h1>Editing Patient</h1>
 
 <%= render "form", patient: @patient %>
 
 <br>
 
-<div>
-  <%= link_to "Show this patient", @patient %> |
-  <%= link_to "Back to patients", patients_path %>
+<div class="text-end">
+  <%= link_to "Show this Patient", @patient, class:'btn btn-primary btn-sm' %>
+  <%= link_to 'Back to Patients', patients_path, class:'btn btn-primary btn-sm' %>
 </div>
