--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -13,17 +13,12 @@
 
   <div>
     <%= form.label :time, style: "display: block" %>
-    <%= form.time_field :time %>
+    <%= form.time_select :time ,:minute_step => 30 %>
   </div>
 
   <div>
     <%= form.label :date, style: "display: block" %>
     <%= form.date_field :date %>
-  </div>
-
-  <div>
-    <%= form.label :visit_reason, style: "display: block" %>
-    <%= form.text_field :visit_reason %>
   </div>
 
   <div>
@@ -45,6 +40,12 @@
     <% form.label :account_id, style: "display: block" %>
     <%= form.hidden_field :account_id, value: current_account.id %>
   </div>
+
+    <div>
+    <%= form.label :visit_reason, style: "display: block" %>
+    <%= form.text_field :visit_reason, class:'form-control' %>
+  </div>
+  
   <br/>
   <div>
     <%= form.submit %>
