--- a/app/views/clinics/_form.html.erb
+++ b/app/views/clinics/_form.html.erb
@@ -13,20 +13,20 @@
 
   <div>
     <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, class:'form-control' %>
   </div>
 
   <div>
     <%= form.label :address, style: "display: block" %>
-    <%= form.text_field :address %>
+    <%= form.text_field :address, class:'form-control' %>
   </div>
 
   <div>
     <% form.label :account_id, style: "display: block" %>
-    <%= form.hidden_field :account_id, value: current_account.id %>
+    <%= form.hidden_field :account_id, class:'form-control', value: current_account.id %>
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit class:'btn btn-primary btn-sm mt-3' %>
   </div>
 <% end %>
