--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -13,20 +13,20 @@
 
   <div>
     <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, class:'form-control' %>
   </div>
 
   <div>
     <%= form.label :field, style: "display: block" %>
-    <%= form.text_field :field %>
+    <%= form.text_field :field, class:'form-control' %>
   </div>
 
   <div>
-    <%= form.label :account_id, style: "display: block" %>
-    <%= form.text_field :account_id %>
+    <% form.label :account_id, style: "display: block" %>
+    <%= form.hidden_field :account_id %>
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit class:'btn btn-primary btn-sm mt-3' %>
   </div>
 <% end %>
