--- a/app/views/doctors/edit.html.erb
+++ b/app/views/doctors/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing doctor</h1>
+<h1>Editing Doctor</h1>
 
 <%= render "form", doctor: @doctor %>
 
 <br>
 
-<div>
-  <%= link_to "Show this doctor", @doctor %> |
-  <%= link_to "Back to doctors", doctors_path %>
+<div class="text-end">
+  <%= link_to "Show this doctor", @doctor, class:'btn btn-primary btn-sm' %> 
+  <%= link_to "Back to doctors", doctors_path, class:'btn btn-primary btn-sm' %>
 </div>
