--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,19 @@
     <header>
       <%= render 'home/nav' %>
     </header>
-
     <p class="notice text-center" style="color: white"><%= notice %></p>
     <p class="alert text-center" style="color: white"><%= alert %></p>
 
-    <div class="container p-3" style="background-color:#40B5AD">
-      <%= yield %>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <div class='container'>
+      <div class="row">
+
+
+
+        <div class="container p-3 col-10" style="background-color:#40B5AD">
+          <%= yield %>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        </div>
+      </div>
     </div>
 
   </body>
