--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div>
     <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, class:'form-control' %>
   </div>
 
   <div>
     <%= form.label :address, style: "display: block" %>
-    <%= form.text_field :address %>
+    <%= form.text_field :address, class:'form-control' %>
   </div>
 
   <div>
@@ -27,6 +27,6 @@
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit class:'btn btn-primary btn-sm mt-3' %>
   </div>
 <% end %>
