--- a/app/views/home/_clinics.html.erb
+++ b/app/views/home/_clinics.html.erb
@@ -22,7 +22,7 @@
           <tr>
             <td scope="row"><%= clinic.name %></td>
             <td><%= clinic.address %></td>
-            <td class="text-center"><%= link_to "Show this Clinic", clinic, class:'rounded-pill btn btn-secondary btn-sm border border-dark' %></td>
+            <td class="text-center"><%= link_to "Show this Clinic", clinic, class:'rounded-pill btn btn-secondary btn-sm border border-dark custom'%></td>
           </tr>
                   
         <% end %>
