--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,7 @@
   <h1 class="text-center" >Account Overview</h1>
   <hr/>
 
+  <h5 class="text-end fw-normal"><%= @today %></h5>
   <h6>Summary:</h6>
   <ul>
     <li>Clinics on Account: <%= current_account.clinics.count %></li>
