--- a/app/views/home/_doctors.html.erb
+++ b/app/views/home/_doctors.html.erb
@@ -23,7 +23,7 @@
           <tr>
             <td scope="row"><%= doctor.name %></td>
             <td><%= doctor.field %></td>
-            <td class="text-center"><%= link_to "Show this Doctor", doctor, class:'rounded-pill btn btn-secondary btn-sm border border-dark' %></td>
+            <td class="text-center"><%= link_to "Show this Doctor", doctor, class:'rounded-pill btn btn-secondary btn-sm border border-dark custom' %></td>
           </tr>
                     
         <% end %>
