--- a/app/views/home/_patients.html.erb
+++ b/app/views/home/_patients.html.erb
@@ -23,7 +23,7 @@
           <tr>
             <td scope="row"><%= patient.name %></td>
             <td><%= patient.address %></td>
-            <td class="text-center"><%= link_to "Show this Patient", patient, class:'rounded-pill btn btn-secondary btn-sm border border-dark' %></td>
+            <td class="text-center"><%= link_to "Show this Patient", patient, class:'rounded-pill btn btn-secondary btn-sm border border-dark custom' %></td>
           </tr>
                     
         <% end %>
