--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,12 +22,26 @@
     <div class='container'>
       <div class="row">
 
+        <% if current_page?(controller: '/home', action: 'index') %>
 
+          <div class="container p-3 col-10" style="background-color:#40B5AD">
+            <%= yield %>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+          </div>
 
-        <div class="container p-3 col-10" style="background-color:#40B5AD">
-          <%= yield %>
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-        </div>
+          <div class="col-2" id='sidebar'>
+            <%= render 'home/sidebar' %>
+          </div>
+
+        <% else %>
+
+          <div class="container p-3 col-10" style="background-color:#40B5AD">
+            <%= yield %>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+          </div>
+
+        <% end %>
+
       </div>
     </div>
 
