--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,9 @@
  *= require_self
  */
 
+
+
+
 /* ------- Class ------- */
 
 .custom {
@@ -32,13 +35,11 @@
 .card-body {
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  background-color: #40B5AD;
-
+  background-color: #96DED1;
 }
 
 .card-header.text-center.fs-5 {
-  background-color: #40B5AD;
-
+  background-color: #40E0D0;
 }
 
 .col-2 {
@@ -68,7 +69,6 @@
 
 #fixed {
   position: fixed;
-  
 }
 
 #shadow {
