--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,17 @@
     <%= javascript_importmap_tags %>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
-  <body style="background-color: #36454F"">
+  <body class="d-flex flex-column min-vh-100" style="background-color: #36454F"">
 
     <header>
       <%= render 'home/nav' %>
     </header>
+
     <p class="notice text-center" style="color: white"><%= notice %></p>
     <p class="alert text-center" style="color: white"><%= alert %></p>
 
-    <div class='container'>
+    <div class='container wrapper flex-grow-1'>
       <div class="row">
-
         <% if current_page?(controller: '/home', action: 'index') %>
 
           <div class="container p-3 col-10" style="background-color:#40B5AD">
@@ -41,9 +41,14 @@
           </div>
 
         <% end %>
-
       </div>
     </div>
+
+    <br/>
+
+    <footer>
+      <%= render 'home/footer' %>
+    </footer>
 
   </body>
 </html>
